<resources>
    <string name="app_name">RelativeLayoutMaterial</string>
    <string name="txvMonument" translatable="false">Catedral</string>
    <string name="txvDateVisit" translatable="false">Fecha Visita</string>
    <string name="txvTypeVisit" translatable="false">Tipo Visita</string>
    <string name="etxDateVisit" translatable="false">Fecha Visita</string>
    <string name="etxTypeVisit" translatable="false">Tipo Visita</string>
    <string name="btnReserved" translatable="false">Reservar</string>
    <string name="imvmalaga">malaga</string>
</resources>
