<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.relativelayoutmaterial.RelativeLayoutMaterialActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">


    <ImageView
        android:id="@+id/imgCity"
        android:layout_width="360dp"
        android:layout_height="201dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/malaga"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription=""
        app:srcCompat="@android:drawable/btn_star_big_off"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="183dp" />

    <TextView
        android:id="@+id/txvMonument"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/txvMonument"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="221dp" />

    <TextView
        android:id="@+id/txvDateVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txvDateVisit"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="271dp" />

    <EditText
        android:id="@+id/etxDateVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="256dp" />

    <TextView
        android:id="@+id/txvTypeVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/txvTypeVisit"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="309dp" />

    <EditText
        android:id="@+id/etxTypeVisit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"

        tools:layout_editor_absoluteX="166dp"
        tools:layout_editor_absoluteY="294dp" />

    <Button
        android:id="@+id/btnBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Comprar"
        tools:layout_editor_absoluteX="237dp"
        tools:layout_editor_absoluteY="453dp" />

    <Button
        android:id="@+id/btnReservadete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnReserved"
        tools:layout_editor_absoluteX="126dp"
        tools:layout_editor_absoluteY="453dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

</android.support.constraint.ConstraintLayout>
